@@ -25,12 +25,15 @@ import org.apache.commons.collections.collection.AbstractCollectionDecorator;
  * <p>
  * Methods are forwarded directly to the decorated set.
  *
+ * @param <E> the type of the elements in the set
  * @since Commons Collections 3.0
  * @version $Revision$ $Date$
  * 
  * @author Stephen Colebourne
  */
-public abstract class AbstractSetDecorator extends AbstractCollectionDecorator implements Set {
+public abstract class AbstractSetDecorator<E>
+        extends AbstractCollectionDecorator<E>
+        implements Set<E> {
 
     /**
      * Constructor only used in deserialization, do not use otherwise.
@@ -46,7 +49,7 @@ public abstract class AbstractSetDecorator extends AbstractCollectionDecorator i
      * @param set  the set to decorate, must not be null
      * @throws IllegalArgumentException if set is null
      */
-    protected AbstractSetDecorator(Set set) {
+    protected AbstractSetDecorator(Set<E> set) {
         super(set);
     }
 
@@ -54,9 +57,19 @@ public abstract class AbstractSetDecorator extends AbstractCollectionDecorator i
      * Gets the set being decorated.
      * 
      * @return the decorated set
+     * @deprecated use decorated()
      */
-    protected Set getSet() {
-        return (Set) getCollection();
+    protected Set<E> getSet() {
+        return decorated();
+    }
+
+    /**
+     * Gets the set being decorated.
+     * 
+     * @return the decorated set
+     */
+    protected Set<E> decorated() {
+        return (Set<E>) super.decorated();
     }
 
 }
